# Vision-System

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  VS_SoftwareBundle.md  azure-pipelines.yml  pch.h
config/: baumerCamConfig.json  baumerCameraIpAddress.json  calib.txt  calibrationboard.json  gv5040FAConfig.json  pickCamera.json  spg.json  visionSystemConfig.json
doc/: CameraCalibration.md  RedisEntries.md  azureBuildPipelineSetUp.md  baumerCameraSetup.md  networkconfiguration.md  setupFormats.md  spec.md  specHttpCom.md
doc/resources/: Format.drawio  communication_overview.drawio  getStatus.drawio
format/0/: networksConfigArea1.json  networksConfigArea1_Template_PickTray.json  networksConfigArea1_Template_Stechtest.json  networksConfigArea2.json  networksConfigAreaPlace.json  networksConfigClassificatorExtension.json
format/999/: handEyeCalibration.json  singleCameraCalibration.json  stereoCalibration.json
licenses/: licenses_pip_packages  licenses_visionSys_libs
resources/: .gitignore  README.md
resources/cppCodeQualityTools/: clang-format  clang-tidy
resources/jetson-config/: 50-udev-default.rules  xorg.conf  (+1 more)
scripts/: CheckGit.cmake  addToAutostart.sh  adjustXorgConfForVNC.sh  deleteNotNeededNetworks.py  deleteSourceFiles.sh  disableSystemd.sh  install_opencv.sh  install_requirements.sh  makeVsBackUp.sh  manage_syslog.sh  preserveSystemTime.sh  setAllBaumerIpAdresses.py  sortingLogs.py  updateNetworksConfigFiles.py
src/classificatorExtension/: CMakeLists.txt  classificatorExtension.cpp  classificatorExtension.h  main_classificatorExtension.cpp
src/common/: CMakeLists.txt  cameraInterface.hpp  projectPaths.h  vs.h  vs_image.hpp  vs_messaging.h  vs_poseObject.h  vs_signalHandler.h
src/common/CREStereoDepthCamDecorator/: CMakeLists.txt  creStereoDepthCamDecorator.cpp  creStereoDepthCamDecorator.h
src/common/baumerCam/: CMakeLists.txt  baumerCam.cpp  baumerCam.hpp
src/common/cameraFactory/: CMakeLists.txt  cameraFactory.cpp  cameraFactory.hpp
src/common/dbFacade/: CMakeLists.txt  dbFacade.cpp  dbFacade.h
src/common/deeplabcut/: CMakeLists.txt  inferDLC.cpp  inferDLC.h
src/common/depthOnlyOnDetections/: CMakeLists.txt  depthOnlyOnDetections.cpp  depthOnlyOnDetections.h
src/common/gv5040FA/: CMakeLists.txt  vs_gv5040FA.cpp  vs_gv5040FA.h
src/common/logging/: logging.cpp  logging.h
src/common/mathHelperFuncs/: CMakeLists.txt  mathHelperFuncs.cpp  mathHelperFuncs.h
src/common/miscellaneous/: CMakeLists.txt  miscellaneous.cpp  miscellaneous.h
src/common/mockCamera/: CMakeLists.txt  mockCamera.cpp  mockCamera.h
src/common/poseEstimation/: CMakeLists.txt  poseEstimation.cpp  poseEstimation.h
src/common/poseEstimationIPA/: CMakeLists.txt  poseEstimationIPA.cpp  poseEstimationIPA.h
src/common/redis_client/: CMakeLists.txt  README.md
src/common/stereoDepth/: CMakeLists.txt  stereoDepth.cpp  stereoDepth.h
src/common/tensorRtHelpers/: CMakeLists.txt  cuda_utils.h  entropyCalibrator.cpp  entropyCalibrator.h  macros.h  trtInference.cpp  trtInference.h  trtLogging.cpp  trtLogging.h
src/common/vs_udp/: CMakeLists.txt  VSCommDefinitions.h  mockUdpHandler.hpp  udpCommStructs2KC.h  udpCommStructs2VS.h  udpReceiver.cpp  udpReceiver.h  udphandler.cpp  udphandler.h
src/common/yolo/: CMakeLists.txt  yolo.cpp  yolo.h
src/common/yoloDLCPipeline/: CMakeLists.txt  yoloDLCPipeline.cpp  yoloDLCPipeline.h
src/detectPickableObjects/: CMakeLists.txt  detectFromTray.cpp  detectFromTray.h  detecting.cpp  detecting.h  ipaDetection.cpp  ipaDetection.h  main_picking.cpp  pickconveyor.cpp  pickconveyor.h  stechtest.cpp  stechtest.h
src/handEyeCalibration/: CMakeLists.txt  calibration.cpp  calibration.h  handEyeAlgo.cpp  handEyeAlgo.h  main_calibration.cpp  main_stechtest.cpp  stereoCalibration.cpp  stereoCalibration.h
src/httpServer/: CMakeLists.txt  main.cpp  server.cpp  server.hpp
src/missionControl/: CMakeLists.txt  main.cpp  missionController.cpp  missionController.h
src/placeConveyorTracking/: CMakeLists.txt  main_placeConveyorTracking.cpp  objTracking.cpp  objTracking.h  placeConveyorDetection.cpp  placeConveyorDetection.h  trackingInterface.h
src/vs_communication/: CMakeLists.txt  connectionHandler.cpp  connectionHandler.h  main.cpp  vs_c_communicationError.h  vs_c_format.cpp  vs_c_format.h  vs_c_init.cpp  vs_c_init.h  vs_c_liveImage.cpp  vs_c_liveImage.h  vs_c_marker.cpp  vs_c_marker.h  vs_c_productionState.cpp  vs_c_productionState.h  vs_c_queue.h  vs_c_status.cpp  vs_c_status.h  vs_c_tcpAcceptor.cpp  vs_c_tcpAcceptor.h  vs_c_tcpConnector.cpp  vs_c_tcpConnector.h  vs_c_tcpStream.cpp  vs_c_tcpStream.h  vs_c_thread.cpp  vs_c_thread.h  vs_c_version.h  vs_c_versionCheckVsPs.cpp  vs_c_versionCheckVsPs.h  vs_c_workItem.h
src/vs_communication/proto/: CMakeLists.txt
src/vs_communication/proto/STVS/: GetStatus.options  GetStatus.proto  Init.proto  Nack.proto  StartProduction.proto
src/vs_communication/proto/VSPS/: Format.proto  LiveImage.proto  Marker.proto  VersionCheckVsPs.proto
tests/: CMakeLists.txt
tests/vs_communication_tests/: CMakeLists.txt  getStatus_test.cpp
tests/vs_processing_tests/: CMakeLists.txt
tests/vs_processing_tests/deeplabcut_test/: CMakeLists.txt  deeplabcut_test.cpp  deeplabcut_test.h
tests/vs_processing_tests/handEyeCalibration3dBoard_test/: CMakeLists.txt  handEyeAlgo3dBoard_test.cpp  handEyeAlgo3dBoard_test.h
tests/vs_processing_tests/pose_estimation_test/: CMakeLists.txt  pose_estimation_test.cpp  pose_estimation_test.h
tests/vs_processing_tests/stereoCalibration_test/: CMakeLists.txt  stereoCalibration_test.cpp  stereoCalibration_test.h
tests/vs_processing_tests/stereoDepthEstimator_test/: CMakeLists.txt  stereoDepthEstimator_test.cpp  stereoDepthEstimator_test.h
tests/vs_processing_tests/yoloDlcPipeline_test/: CMakeLists.txt  yoloDlcPipeline_test.cpp  yoloDlcPipeline_test.h
tests/vs_processing_tests/yolo_filterBySize_test/: CMakeLists.txt  yolo_filterBySize_test.cpp  yolo_filterBySize_test.h
tests/vs_processing_tests/yolo_test/: CMakeLists.txt  yolo_test.cpp  yolo_test.h
(+44 files in other folders)
