# Cameras
add_subdirectory(gv5040FA)
add_subdirectory(mockCamera)
add_subdirectory(baumerCam)
add_subdirectory(cameraFactory)

add_subdirectory(redis_client)
add_subdirectory(vs_udp)
add_subdirectory(yolo)
add_subdirectory(deeplabcut)
add_subdirectory(yoloDLCPipeline)
add_subdirectory(poseEstimation)
add_subdirectory(poseEstimationIPA)
add_subdirectory(mathHelperFuncs)
add_subdirectory(dbFacade)
add_subdirectory(tensorRtHelpers)
add_subdirectory(miscellaneous)
add_subdirectory(stereoDepth)
add_subdirectory(CREStereoDepthCamDecorator)
add_subdirectory(depthOnlyOnDetections)


